# ADI

./: .gitignore  CHANGELOG.md  README.md  README_en.md  build.gradle  local.properties  settings.gradle
Analyze/: .gitignore  PlotLine.py  PlotSegment.py  adi_1568174079.log.html  adi_analyzer.py  event_aggregation.py
Analyze/aggregate/: AggregateObject.py  EventAggregation.py  GlobalAggregateInfo.py  __init__.py  aggregate_to_json.py  event_aggregation.py
Analyze/event/: Event.py  GCEvent.py  MonitorContendedEvent.py  ObjectAllocEvent.py  ObjectFreeEvent.py  StackEvent.py  ThreadStartEvent.py  __init__.py
Analyze/handler/: BaseHandler.py  GCHandler.py  MonitorContendedHandler.py  __init__.py  (+2 more)
adi/: build.gradle  settings.gradle
adi_analyze/: .gitignore  adi_analyzer.py  setup.py
adi_lib/: build.gradle  settings.gradle
adi_lib/matrix-io-canary/: .gitignore  CMakeLists.txt  build.gradle
adi_lib/matrix-io-canary/src/main/cpp/: io_canary_jni.cc
adi_lib/matrix-io-canary/src/main/cpp/comm/: log.h
adi_lib/matrix-io-canary/src/main/cpp/core/: io_canary.cc  io_info_collector.cc  io_info_collector.h
adi_lib/matrix-io-canary/src/main/java/com/tencent/matrix/iocanary/config/: IOConfig.java
adi_lib/matrix-io-canary/src/main/java/com/tencent/matrix/iocanary/core/: IOCanaryCore.java  IOIssue.java
adi_lib/matrix-io-canary/src/main/java/com/tencent/matrix/iocanary/util/: IOCanaryUtil.java
adilib/: .gitignore  CMakeLists.txt  build.gradle
app/: build.gradle
doc/: adi_对象分配.html  adi_线程竞争.html
jdi/: build.gradle
jvmtilib/: CMakeLists.txt  build.gradle
(+164 files in other folders)
